--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "xmlhttprequest-ssl": "^1.6.2"
   },
   "homepage": "https://typewritesomething.com",
   "repository": {
