--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -20,14 +20,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
-      - run: npm i @sentry/cli
-      - run: export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
-      - run: export SENTRY_ORG=bozdoz
-      - run: export SENTRY_PROJECT=tws
-      - run: export VERSION=$(node -e "console.log(require('./package.json').version)")
-      - run: echo $VERSION
-      - run: echo $SENTRY_PROJECT
-      - run: npx sentry-cli releases new $VERSION -p $SENTRY_PROJECT 
-      - run: npx sentry-cli releases set-commits --auto $VERSION
-      - run: npx sentry-cli releases files $VERSION upload-sourcemaps dist/
-      - run: npx sentry-cli releases finalize $VERSION
+      - run: |
+          npm i @sentry/cli
+          export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
+          export SENTRY_ORG=bozdoz
+          export SENTRY_PROJECT=tws
+          export VERSION=$(node -e "console.log(require('./package.json').version)")
+          echo $VERSION
+          npx sentry-cli releases new $VERSION -p $SENTRY_PROJECT 
+          npx sentry-cli releases set-commits --auto $VERSION
+          npx sentry-cli releases files $VERSION upload-sourcemaps dist/
+          npx sentry-cli releases finalize $VERSION
