--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
     steps:
       - uses: actions/checkout@v2
       - name: Setup node ${{ matrix.node-version }}
@@ -20,14 +20,16 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
-      - run: |
-          npm i @sentry/cli
-          export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
-          export SENTRY_ORG=bozdoz
-          export SENTRY_PROJECT=tws
-          export VERSION=$(node -e "console.log(require('./package.json').version)")
-          echo $VERSION
-          npx sentry-cli releases new $VERSION -p $SENTRY_PROJECT 
-          npx sentry-cli releases set-commits --auto $VERSION
-          npx sentry-cli releases files $VERSION upload-sourcemaps dist/
-          npx sentry-cli releases finalize $VERSION
+      - run: echo "VERSION=$(node -e \"console.log(require('./package.json').version)\")" >> $GITHUB_ENV
+      - run: echo $VERSION
+      - run: echo ${{ env.VERSION }}
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: bozdoz
+          SENTRY_PROJECT: tws
+        with:
+          environment: production
+          sourcemaps: './dist'
+          version: ${{ env.VERSION }}
