--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
-      - run: echo "VERSION=$(node -e \"console.log(require('./package.json').version)\")" >> $GITHUB_ENV
+      - run: VERSION=$(node -e "console.log(require('./package.json').version)") && echo "VERSION=${VERSION}" >> $GITHUB_ENV
       - run: echo $VERSION
       - run: echo ${{ env.VERSION }}
       - name: Create Sentry release
