--- a/package.json
+++ b/package.json
@@ -15,44 +15,44 @@
     "watch:browser": "browser-sync start --config bs-config.js"
   },
   "dependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
+    "@babel/preset-env": "^7.24.5",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-typescript": "^8.1.1",
-    "lz-string": "^1.4.4",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "lz-string": "^1.5.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.36.1",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0",
-    "tslib": "^1.14.1"
+    "rollup-plugin-typescript2": "^0.29.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^7.29.4",
-    "@types/jest": "^27.0.2",
-    "@types/lz-string": "^1.3.34",
-    "@types/node": "^14.14.27",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@testing-library/dom": "^7.31.2",
+    "@types/jest": "^27.5.2",
+    "@types/lz-string": "^1.5.0",
+    "@types/node": "^14.18.63",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
-    "browser-sync": "^2.27.11",
+    "browser-sync": "^2.29.3",
     "browser-sync-console": "^1.0.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^4.3.8",
-    "jest": "^27.3.1",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.1.3"
+    "jest": "^27.5.1",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.8.8",
+    "ts-jest": "^27.1.5",
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   },
   "homepage": "https://typewritesomething.com",
   "repository": {
@@ -83,6 +83,6 @@
     ]
   },
   "engines": {
-    "node": ">= 12.x"
+    "node": ">=20"
   }
 }
