--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.5.0",
+    "howler": "^2.2.4",
     "lz-string": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.79.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^7.31.2",
+    "@types/howler": "^2.2.11",
     "@types/jest": "^27.5.2",
     "@types/lz-string": "^1.5.0",
     "@types/node": "^14.18.63",
