--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.5.0",
     "@sentry/browser": "^7.114.0",
-    "@sentry/tracing": "^7.114.0",
     "howler": "^2.2.4",
     "lz-string": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0"
+    "rollup-plugin-typescript2": ">=0.36.0 < 1"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.31.2",
