--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run watch",
     "build": "NODE_ENV=production rollup -c",
-    "lint": "eslint ./src --ext .js,.ts",
+    "lint": "deno lint ./src",
     "test:coverage": "jest --coverage",
     "postinstall": "tsc --noEmit",
     "test": "jest",
@@ -43,15 +43,9 @@
     "babel-eslint": "^10.1.0",
     "browser-sync": "^2.29.3",
     "browser-sync-console": "^1.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^4.3.8",
     "jest": "^27.5.1",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.8.8",
     "ts-jest": "^27.1.5",
     "tslib": "^2.6.2",
     "typescript": "^4.9.5"
@@ -80,8 +74,8 @@
   },
   "lint-staged": {
     "*.(js|ts)": [
-      "eslint --cache --fix",
-      "prettier --write"
+      "deno lint --fix",
+      "deno fmt"
     ]
   },
   "engines": {
