--- a/package.json
+++ b/package.json
@@ -5,32 +5,18 @@
   "private": true,
   "scripts": {
     "start": "npm run watch",
-    "build": "NODE_ENV=production rollup -c",
+    "build": "NODE_ENV=production deno run --allow-env --allow-read --allow-run ./build.ts",
     "lint": "deno lint ./src",
     "test:coverage": "jest --coverage",
     "postinstall": "tsc --noEmit",
     "test": "jest",
     "watch": "npm-run-all -p watch:*",
-    "watch:js": "rollup -c -w",
+    "watch:js": "deno task build -- --watch",
     "watch:browser": "browser-sync start --config bs-config.js"
   },
   "dependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.24.5",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.5.0",
     "howler": "^2.2.4",
-    "lz-string": "^1.5.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0"
+    "lz-string": "^1.5.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.31.2",
@@ -38,14 +24,13 @@
     "@types/jest": "^27.5.2",
     "@types/lz-string": "^1.5.0",
     "@types/node": "^14.18.63",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-eslint": "^10.1.0",
     "browser-sync": "^2.29.3",
     "browser-sync-console": "^1.0.2",
+    "esbuild": "^0.24.0",
     "husky": "^4.3.8",
     "jest": "^27.5.1",
     "lint-staged": "^10.5.4",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^27.1.5",
     "tslib": "^2.6.2",
     "typescript": "^4.9.5"
