--- a/now.json
+++ b/now.json
@@ -14,6 +14,10 @@
       "use": "@now/static"
     },
     {
+      "src": "./dist/**",
+      "use": "@now/static"
+    },
+    {
       "src": "./favicon.ico",
       "use": "@now/static"
     },
