--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
     "lib": ["DOM"]
+  },
+  "lint": {
+    "rules": {
+      "exclude": ["no-process-globals"]
+    }
   }
 }
