--- a/now.json
+++ b/now.json
@@ -2,6 +2,10 @@
   "version": 2,
   "builds": [
     {
+      "src": "package.json",
+      "use": "@now/static-build"
+    },
+    {
       "src": "./index.html",
       "use": "@now/static"
     },
